[QOLOE-173]Fix button state colours in dark mode.

--- a/src/components/bs5/button/button.scss
+++ b/src/components/bs5/button/button.scss
@@ -1,6 +1,7 @@
 // QGDS QOL Button
 // extends https://getbootstrap.com/docs/5.3/components/buttons/#variables
 
+// QGDS specific button variables.
 .btn {
     --#{$prefix}btn-padding-x: 1.5rem;
     --#{$prefix}btn-padding-y: 0.75rem;
@@ -70,13 +71,15 @@
         --#{$prefix}btn-border-color: var(--#{$prefix}dark-green-dark);
         --#{$prefix}btn-color: var(--#{$prefix}text-darkest);
         --#{$prefix}btn-hover-color: var(--#{$prefix}text-darkest);
-        --#{$prefix}btn-hover-bg: var(--#{$prefix}light-green-dark);
-        --#{$prefix}btn-hover-border-color: var(--#{$prefix}light-green-dark);
+        --#{$prefix}btn-hover-bg: var(--#{$prefix}color-default-color-dark-action-primary-hover);
+        --#{$prefix}btn-hover-border-color: var(--#{$prefix}color-default-color-dark-action-primary-hover);
         --#{$prefix}btn-active-color: var(--#{$prefix}light-text-heading);
         --#{$prefix}btn-active-bg: var(--#{$prefix}extra-light-grey);
         --#{$prefix}btn-disabled-bg: rgba(224, 224, 224, 0.1);
-        --#{$prefix}btn-disabled-color: var(--#{$prefix}text-light-blue-dark);
+        --#{$prefix}btn-disabled-color: var(--#{$prefix}color-default-color-dark-text-lighter);
         --#{$prefix}btn-disabled-border-color: transparent;
+        --#{$prefix}btn-focus-bg: var(--#{$prefix}color-default-color-dark-action-primary-hover);
+        --#{$prefix}btn-focus-border-color: var(--#{$prefix}color-default-color-dark-action-primary-hover);
     }
 
     //Secondary button variant (dark mode)
@@ -90,7 +93,7 @@
         --#{$prefix}btn-active-bg: var(--#{$prefix}extra-light-grey);
         --#{$prefix}btn-active-color: var(--#{$prefix}light-text-heading);
         --#{$prefix}btn-disabled-bg: transparent;
-        --#{$prefix}btn-disabled-color: var(--#{$prefix}text-light-blue-dark);
+        --#{$prefix}btn-disabled-color: var(--#{$prefix}color-default-color-dark-text-lighter); 
         --#{$prefix}btn-disabled-border-color: rgba(224, 224, 224, 0.1);
     }
 
@@ -105,11 +108,12 @@
         --#{$prefix}btn-active-color: var(--#{$prefix}white);
         --#{$prefix}btn-focus-bg: var(--#{$prefix}dark-background-shade);
         --#{$prefix}btn-disabled-bg: transparent;
-        --#{$prefix}btn-disabled-color: var(--#{$prefix}text-light-blue-dark);
+        --#{$prefix}btn-disabled-color: var(--#{$prefix}color-default-color-dark-text-lighter);
         --#{$prefix}btn-disabled-border-color: transparent;
     }
 }
 
+// General styling rules.
 a.btn, .btn {
     white-space: nowrap;
 
@@ -123,6 +127,7 @@ a.btn, .btn {
     &:hover, &:visited, &:focus {
         color: var(--#{$prefix}btn-color);
         text-decoration: underline;
+        text-decoration-color: inherit;
         text-underline-offset: 0.3em;
     }
     &:active {
@@ -134,6 +139,9 @@ a.btn, .btn {
     }
     &:visited {
         color: var(--#{$prefix}btn-color);
+        &:hover {
+            text-decoration-color: inherit;
+        }
     }
     &:disabled,
     &.disabled {
@@ -220,37 +228,72 @@ a.btn, .btn {
         }
     }
 
-    //Dark mode button variants
-    .dark &, .dark-alt & {
+}
+
+//Dark mode button variants
+.dark .btn,
+.dark a.btn,
+.dark-alt .btn,
+.dark-alt a.btn {
+
+    &:focus {
+        outline: var(--#{$prefix}dark-focus) solid 3px;
+        outline-offset: 2px;
+    }
+
+    &-primary {
         &:focus {
-            outline: var(--#{$prefix}dark-focus) solid 3px;
-            outline-offset: 2px;
+            background-color: var(--#{$prefix}btn-focus-bg);
+            border-color: var(--#{$prefix}btn-focus-border-color);
         }
-
-        &-secondary,
-        &-outline-secondary {
-            color: var(--#{$prefix}btn-disabled-color);
-        }
-
-        &-tertiary {
+        &:disabled, &.disabled {
             .btn-icon {
-                color: var(--#{$prefix}golden-yellow);
+                color: var(--#{$prefix}btn-disabled-color);
             }
-            &:hover {
-                .btn-icon {
-                    color: var(--#{$prefix}dark-action-secondary-hover);
-                }
+        }
+    }
+
+    &-secondary,
+    &-outline-secondary {
+        .btn-icon {
+            color: var(--#{$prefix}btn-border-color);
+        }
+        &:hover {
+            border: var(--#{$prefix}btn-border-width) solid var(--#{$prefix}btn-border-color);
+        }
+        &:active {
+            .btn-icon {
+                color: var(--#{$prefix}btn-active-color);
             }
-            &:active {
-                text-decoration: none;
-                .btn-icon {
-                    color: var(--#{$prefix}white);
-                }
+        }
+        &:disabled, &.disabled {
+            .btn-icon {
+                color: var(--#{$prefix}btn-disabled-color);
             }
-            &:disabled, &.disabled {
-                .btn-icon {
-                    color: var(--#{$prefix}btn-disabled-color);
-                }
+        }
+    }
+
+    &-tertiary {
+        .btn-icon {
+            color: var(--#{$prefix}golden-yellow);
+        }
+        &:hover {
+            .btn-icon {
+                color: var(--#{$prefix}dark-action-secondary-hover);
+            }
+        }
+        &:active {
+            text-decoration: none;
+            .btn-icon {
+                color: var(--#{$prefix}white);
+            }
+        }
+        &:focus {
+            background-color: var(--#{$prefix}btn-hover-bg);
+        }
+        &:disabled, &.disabled {
+            .btn-icon {
+                color: var(--#{$prefix}btn-disabled-color);
             }
         }
     }
